# TSARM

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/raw/: sample_2023.nt  sample_2024.nt
docs/: baselines.md
scripts/: ingest_samples.py  rdfrules_mine.py  run_benchmark.py  run_dbpedia.py  run_dbpedia_temporal.py  run_pipeline.py  scale_test.py
src/evaluation/: adapters.py  benchmark.py  report.py  synthetic.py
src/ingestion/: ingest.py  rdf_parser.py  spark_session.py
src/metrics/: temporal.py
src/mining/: arm.py
src/windowing/: sliding_window.py
tests/: conftest.py  test_evaluation.py  test_ingest.py  test_metrics.py  test_mining.py  test_rdf_parser.py  test_synthetic.py  test_windowing.py
