[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata lives in setup.cfg for compatibility with the older
# setuptools shipped on the development machine (PEP 621 [project] needs
# setuptools >= 61). setup.cfg is read by both old and modern setuptools.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
