[metadata]
name = tsarm
version = 0.1.0
description = Scalable Temporal Semantic Association Rule Mining in Evolving Knowledge Graphs
long_description = file: README.md
long_description_content_type = text/markdown
author = Isya Isyaku
author_email = isyakuisya@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/ishaq-ishaq/TSARM
keywords = association-rule-mining, knowledge-graphs, rdf, temporal, apache-spark, sparql
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Information Analysis
    Intended Audience :: Science/Research

[options]
# NOTE: PySpark 4.x requires Java 17+ (set JAVA_HOME to a JDK 17+ install).
python_requires = >=3.9
packages =
    src
    src.ingestion
    src.windowing
    src.mining
    src.metrics
    src.evaluation
install_requires =
    pyspark==4.0.3
    rdflib==7.6.0
    pyarrow>=15.0.0
    pandas>=2.2.0

[options.extras_require]
test = pytest>=8.0
notebooks = jupyter>=1.0
